collisions fix